[project]
name = "hh_api_lib"
version = "0.1.0"
description = "HH.ru API client for vacancy data collection"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0"

]

[project.optional-dependencies]
    progress = ["tqdm"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"